# SpanMarkerNER

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  install.html  make.bat  news.html  objects.inv  onnx_implementation.py  onnx_implementation_1.py  onnx_implementation_2.py  onnx_implementation_3.py  onnx_implementation_with_optimum.py  onnx_implementation_with_torch.py  onnx_with_torchdynamo.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test.py  test_onnx.py
.doctrees/: index.doctree  install.doctree  news.doctree  py-modindex.doctree
.doctrees/api/: modules.doctree  span_marker.configuration.doctree  span_marker.data_collator.doctree  span_marker.doctree  span_marker.evaluation.doctree  span_marker.label_normalizer.doctree  span_marker.model_card.doctree  span_marker.modeling.doctree  span_marker.output.doctree  span_marker.pipeline_component.doctree  span_marker.spacy_integration.doctree  span_marker.tokenizer.doctree  span_marker.trainer.doctree
.doctrees/nbsphinx/notebooks/: getting_started.ipynb  model_configuration.ipynb  model_loading.ipynb  spacy_integration.ipynb
.doctrees/notebooks/: document_level_context.doctree  getting_started.doctree  how_it_works.doctree  index.doctree  model_configuration.doctree  model_loading.doctree  model_training.doctree  spacy_integration.doctree
.github/workflows/: deploy_docs.yaml  tests.yaml
_modules/: index.html
_modules/span_marker/: configuration.html  data_collator.html  evaluation.html  label_normalizer.html  model_card.html  modeling.html  output.html  pipeline_component.html  spacy_integration.html  tokenizer.html  trainer.html
_modules/transformers/: trainer.html
_sources/: index.rst.txt  install.rst.txt
_sources/api/: span_marker.configuration.rst.txt  span_marker.modeling.rst.txt  span_marker.pipeline_component.rst.txt  span_marker.spacy_integration.rst.txt
_sources/notebooks/: getting_started.ipynb.txt  how_it_works.ipynb.txt  index.rst.txt  model_configuration.ipynb.txt  model_loading.ipynb.txt  model_training.ipynb.txt  spacy_integration.ipynb.txt
_static/: documentation_options.js
_static/css/: nltk_theme.css
api/: modules.html  span_marker.configuration.html  span_marker.data_collator.html  span_marker.evaluation.html  span_marker.html  span_marker.label_normalizer.html  span_marker.model_card.html  span_marker.modeling.html  span_marker.output.html  span_marker.pipeline_component.html  span_marker.spacy_integration.html  span_marker.tokenizer.html  span_marker.trainer.html
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/_templates/: package.rst
docs/api/: modules.rst  span_marker.data_collator.rst  span_marker.evaluation.rst  span_marker.label_normalizer.rst  span_marker.model_card.rst  span_marker.modeling.rst  span_marker.output.rst  span_marker.rst  span_marker.tokenizer.rst  span_marker.trainer.rst
docs/notebooks/: index.rst
examples/: README.md  getting_started.ipynb  model_loading.ipynb
lib/span_marker/: __init__.py  configuration.py  data_collator.py  evaluation.py  label_normalizer.py  model_card.py  modeling.py  output.py  pipeline_component.py  spacy_integration.py  tokenizer.py  trainer.py
notebooks/: README.md  document_level_context.html  document_level_context.ipynb  getting_started.html  getting_started.ipynb  how_it_works.html  how_it_works.ipynb  index.html  model_configuration.html  model_configuration.ipynb  model_loading.html  model_loading.ipynb  model_training.html  model_training.ipynb  spacy_integration.html  spacy_integration.ipynb
span_marker/: __init__.py  configuration.py  data_collator.py  evaluation.py  label_normalizer.py  model_card.py  model_card_template.md  modeling.py  output.py  pipeline_component.py  spacy_integration.py  tokenizer.py  trainer.py
span_marker/data/: __init__.py  data_collator.py  label_normalizer.py
span_marker/onnx/: spanmarker_onnx.py
tests/: conftest.py  constants.py  helpers.py  model_card_pattern.py  test_configuration.py  test_model_card.py  test_modeling.py  test_pipeline.py  test_spacy_integration.py  test_trainer.py
tests/data/tiny_conll2003/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/tiny_conll2003/train/: data-00000-of-00001.arrow  state.json
tests/data/tiny_conll2003_with_context/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/tiny_conll2003_with_context/train/: data-00000-of-00001.arrow  state.json
tests/data/tiny_fabner/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/tiny_fabner/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/tiny_fewnerd_super/test/: data-00000-of-00001.arrow  state.json
tests/data/tiny_fewnerd_super/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
training_scripts/: conll03_context.py  conll03_no_context.py  conllpp_context.py  fewnerd_base.py  fewnerd_large.py  ontonotesv5.py
